src/components/references/style.module.scss
@import '../../styles/colors';

@keyframes highlight-ref-link {
  0% {
    border-bottom-color: red;
    background-color: yellow;
  }
  100% {
    border-bottom-color: transparent;
    background-color: transparent;
  }
}

%data-anchor-focused {
  position: relative;
  &[data-anchor-focused]::before {
    content: "";
    position: absolute;
    z-index: -1;
    top: -.8rem;
    bottom: -.8rem;
    left: -.2rem;
    right: -.2rem;
    display: block;
    border-bottom: 3px solid transparent;
    transition: background-color 3s ease-in 0s, border-color 3s ease-in 0s;
    animation: highlight-ref-link 6s;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
  }
}

a.ref-link {
  display: inline-block;
  color: $link-color;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
  @extend %data-anchor-focused;
}
ol.references {
  > li {
    font-size: 1rem;
    > a.cite-back-link {
      text-decoration: none;
    }
    > :global(.ui.message) p {
      font-size: 1rem;
    }
    line-height: 1.5;
    margin-top: .8rem;
    margin-bottom: .8rem;
    @extend %data-anchor-focused;
  }
}

